# scp-ci-templates

./: README.md  create-repo.sh  requirements.txt
agent/: pyproject.toml  requirements.txt
agent/src/ci_agent/: __init__.py  cli.py  models.py
agent/src/ci_agent/analyze/: analyzer.py  history.py  insights.py  optimizer.py
agent/src/ci_agent/detect/: deploy_target.py  detector.py  framework.py  project_type.py  security.py  test_tools.py
agent/src/ci_agent/docker/: generator.py
agent/src/ci_agent/docs/: generator.py
agent/src/ci_agent/heal/: healer.py  issue_creator.py  pr_creator.py  scorer.py  strategies.py
agent/src/ci_agent/llm/: advisor.py
agent/src/ci_agent/notify/: sender.py
agent/src/ci_agent/predict/: preflight.py
agent/src/ci_agent/review/: pr_reviewer.py
agent/src/ci_agent/security/: scanner.py
agent/src/ci_agent/version/: artifact_tracker.py  versioner.py
agent/tests/: test_analyzer.py  test_artifact_tracker.py  test_dep_graph.py  test_detector.py  test_docker_gen.py  test_docs_gen.py  test_healer.py  test_issue_creator.py  test_notify.py  test_pr_reviewer.py  test_preflight.py  test_scorer.py  test_security.py  test_smart_healer.py  test_versioner.py
dockerfiles/: agent.Dockerfile
docs/: SCP-CI-Platform-Confluence.md  SCP-CI-Templates-Stakeholder-Document.md
examples/: caller-library.yml  caller-service.yml
templates/agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
templates/agent/.github/workflows/: ci.yml
templates/agent/src/{{package_name}}/: main.py
templates/agent/tests/unit/: test_health.py
(+13 files in other folders)
